--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <label>
                   <input type="Checkbox" />
                   <span
-                    id="btn-box"
+                    id="btnRain"
                     onclick="sensorRain()"
                     class="check"></span>
                 </label>
@@ -144,7 +144,10 @@
                 <p>Chế độ : <span id="modeServo">OFF</span></p>
                 <label>
                   <input type="Checkbox" />
-                  <span onclick="motorServo()" class="check"></span>
+                  <span
+                    id="btnServo"
+                    onclick="motorServo()"
+                    class="check"></span>
                 </label>
               </div>
             </div>
@@ -160,7 +163,10 @@
                 <p id="modeLight">Trời tối: 0</p>
                 <label>
                   <input type="Checkbox" />
-                  <span onclick="sensorLight()" class="check"></span>
+                  <span
+                    id="btnLight"
+                    onclick="sensorLight()"
+                    class="check"></span>
                 </label>
               </div>
             </div>
@@ -176,7 +182,10 @@
                 <p>Chế độ : <span id="modeMotor">OFF</span></p>
                 <label>
                   <input type="Checkbox" />
-                  <span onclick="motorWater()" class="check"></span>
+                  <span
+                    id="btnMotor"
+                    onclick="motorWater()"
+                    class="check"></span>
                 </label>
               </div>
             </div>
