--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-3 col-sm-0 col-md-0 col-lg-3">
+        <div class="col-0 col-sm-0 col-md-0 col-lg-3">
           <ion-icon id="menuSidebar" name="menu"></ion-icon>
           <div class="sidebar">
             <ul>
@@ -86,7 +86,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-9 col-sm-12 col-md-12 col-lg-9">
+        <div class="col-9 col-sm-12 col-md-12 col-lg-9 garden">
           <h2 class="garden__tittle">Smart Home Garden</h2>
           <div class="row text-center garden__content">
             <div class="col-12 col-sm-12 col-md-6 col-lg-4">
