responsive focus icon

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
     <!-- MAIN CSS  -->
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -28,7 +34,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-0 col-sm-0 col-md-0 col-lg-3">
-          <ion-icon id="menuSidebar" name="menu"></ion-icon>
+          <i class="fa fa-bars" id="menuSidebar"></i>
           <div class="sidebar">
             <ul>
               <li class="list active">
