--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-0 col-sm-0 col-md-0 col-lg-3">
-          <i class="fa fa-bars" id="menuSidebar"></i>
+          <i class="fa fa-bars" id="menuBar"></i>
           <div class="sidebar">
             <ul>
               <li class="list active">
                 <b></b>
                 <b></b>
                 <a href="#">
-                  <span><ion-icon name="home-outline"></ion-icon></span>
+                  <span><i class="fa fa-home"></i></span>
                   <span>Home</span>
                 </a>
               </li>
@@ -49,15 +49,15 @@
                 <b></b>
                 <b></b>
                 <a href="#">
-                  <span><ion-icon name="battery-full-outline"></ion-icon></span>
-                  <span>Humi</span>
+                  <span><i class="fa fa-cloud-rain"></i></span>
+                  <span>Rain</span>
                 </a>
               </li>
               <li class="list">
                 <b></b>
                 <b></b>
                 <a href="#">
-                  <span><ion-icon name="bag-add-outline"></ion-icon></span>
+                  <span><i class="fa fa-temperature-high"></i></span>
                   <span>Temperature</span>
                 </a>
               </li>
@@ -65,7 +65,7 @@
                 <b></b>
                 <b></b>
                 <a href="#">
-                  <span><ion-icon name="beaker-outline"></ion-icon></span>
+                  <span><i class="fa fa-temperature-low"></i></span>
                   <span>Motor</span>
                 </a>
               </li>
@@ -74,7 +74,7 @@
                 <b></b>
                 <a href="#">
                   <span>
-                    <ion-icon name="beaker-outline"></ion-icon>
+                    <i class="fa fa-lightbulb"></i>
                   </span>
                   <span>Light</span>
                 </a>
@@ -84,9 +84,9 @@
                 <b></b>
                 <a href="#">
                   <span>
-                    <ion-icon name="beaker-outline"></ion-icon>
+                    <i class="fa fa-thermometer-empty"></i>
                   </span>
-                  <span>Rain</span>
+                  <span>Humi</span>
                 </a>
               </li>
             </ul>
