--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-0 col-sm-0 col-md-0 col-lg-3">
-          <i class="fa fa-bars" id="menuBar"></i>
+          <!-- <i class="fa fa-bars" id="menuBar"></i> -->
           <div class="sidebar">
             <ul>
               <li class="list active">
