--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-0 col-sm-0 col-md-0 col-lg-3">
+        <div class="col-0 col-sm-3 col-md-0 col-lg-3">
           <!-- <i class="fa fa-bars" id="menuBar"></i> -->
           <div class="sidebar">
             <ul>
@@ -95,7 +95,7 @@
         <div class="col-12 col-sm-12 col-md-12 col-lg-9 garden">
           <h2 class="garden__tittle">Smart Home Garden</h2>
           <div class="row text-center garden__content">
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
               <div class="garden__item">
                 <img
                   id="imgRain"
@@ -128,7 +128,7 @@
                 </label>
               </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
               <div class="garden__item">
                 <img
                   src="./img/sensor soil.png"
@@ -139,7 +139,7 @@
                 <p>Độ ẩm : <span id="valueSoil"></span>%</p>
               </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
               <div class="garden__item">
                 <img
                   src="./img/maiche.png"
@@ -158,7 +158,7 @@
                 </label>
               </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
               <div class="garden__item">
                 <img
                   id="imgLight"
@@ -177,7 +177,7 @@
                 </label>
               </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
               <div class="garden__item">
                 <img
                   id="imgMotor"
@@ -196,7 +196,7 @@
                 </label>
               </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
               <div class="garden__item">
                 <img
                   src="./img/sensor temperatue.png"
