--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <ion-icon name="grid-outline" class="open"></ion-icon>
         <ion-icon name="close-circle-outline" class="close"></ion-icon>
       </div>
-      <audio id="audio" src="click.mp3" autostart="false"></audio>
+      <audio id="audio" src="click.mp3" autostart="true"></audio>
     </div>
 
     <script
